--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -14,10 +14,16 @@
     }
 }
 
+@media screen and (max-width: 700px)  {
+    .lead__subtitle {
+        margin: 0 16px 56px;
+    }
+}
+
 @media screen and (max-width: 500px)  {
     .lead__subtitle {
         font-size: 16px;
         line-height: 20px;
-        margin: 0 auto 40px;
+        margin: 0 16px 40px;
     }
 }
