--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -16,6 +16,7 @@
 
 @media screen and (max-width: 700px)  {
     .lead__title {
+        margin: 48px 16px 32px;
         font-size: 60px;
     }
 }
@@ -24,6 +25,6 @@
     .lead__title {
         font-size: 40px;
         line-height: 44px;
-        margin: 48px auto 16px;
+        margin: 48px 16px 16px;
     }
 }
