first version project

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,6 +6,6 @@
     -moz-text-size-adjust: 100%;  
     text-rendering: optimizeLegibility;
     background-color: #2A2C2F;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     color: #FFFFFF
 }
