--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -25,6 +25,6 @@
     .lead__title {
         font-size: 40px;
         line-height: 44px;
-        margin: 48px 16px 16px;
+        margin: 48px auto 16px;
     }
 }
