first version project

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,5 +7,5 @@
     text-rendering: optimizeLegibility;
     background-color: #2A2C2F;
     font-family: 'Inter', Arial, sans-serif;
-    color: #FFFFFF
+    color: #FFFFFF;
 }
