--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,17 @@
 .lead__image {
-    width: 100%;
+    display: block;
+    max-width: 984px;
+    margin: 0 auto;
+}
+
+@media screen and (max-width:1150px) {
+    .lead__image {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width:928px) {
+    .lead__image {
+        max-width: 100%;
+    }
 }
