--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,14 +1,24 @@
 .cover__subtitle {
-    margin: 0 auto;
-    max-width: 360px;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 18px;
     line-height: 1.22;
+    max-width: 360px;
     text-align: center;
+    z-index: 1;
+    margin: 0;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width:1150px) {
+    
+}
+
+@media screen and (max-width:900px) {
+    
+}
+
+@media screen and (max-width:500px) {
     .cover__subtitle {
+        max-width: 280px;
         font-size: 14px;
         line-height: 1.14;
     }
