--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,10 +5,20 @@
     font-size: 72px;
     line-height: 1.06;
     text-align: center;
+    z-index: 1;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width:1150px) {
+    
+}
+
+@media screen and (max-width:900px) {
+    
+}
+
+@media screen and (max-width:500px) {
     .cover__title {
+        max-width: 250px;
         margin: 0 0 16px;
         font-size: 32px;
         line-height: 1.09;
