--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,25 +2,21 @@
     display: flex;
     justify-content: space-between;
     max-width: 1184px;
-    margin: 0 auto;
+    margin: 0 48px;
     flex-wrap: wrap;
 }
 
-@media screen and (max-width: 1150px) {
-    .footer {
-        max-width: 928px;
-    }
-}
 
 @media screen and (max-width: 900px) {
     .footer {
-        max-width: 720px;
+        margin: 0 24px;
     }
 }
 
+
+
 @media screen and (max-width: 500px) {
     .footer {
-        max-width: 186px;
         flex-direction: column;
         margin: 0;
     }
