--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,16 +3,31 @@
     font-size: 10px;
     line-height: 1.4;
     text-transform: uppercase;
-    margin: 8px 0 92px 0;
+    display: block;
+    max-width: 984px;
+    margin: 8px auto 92px;
+    letter-spacing: 1.5px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1150px) {
     .lead__caption {
-        margin: 8px 0 92px 24px;
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__caption {
+        margin: 8px 0 92px 48px;
     }
 }
 
 @media screen and (max-width: 900px) {
+    .lead__caption {
+        margin: 8px 0 88px 24px;
+    }
+}
+
+@media screen and (max-width: 500px) {
     .lead__caption {
         margin: 8px 0 64px 16px;
     }
