--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 .page {
+    max-width: 1280px;
+    margin: 0 auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
