--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -1,10 +1,14 @@
 .places__card {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, max-content);
     column-gap: 40px;
     row-gap: 48px;
     max-width: 984px;
     margin: 0 auto 80px;
+}
+
+.places__card:last-of-type {
+    margin-bottom: 0px;
 }
 
 @media screen and (max-width: 1150px) {
@@ -16,7 +20,6 @@
 
 @media screen and (max-width: 900px) {
     .places__card {
-        column-gap: 28px;
         max-width: 720px;
         margin: 0 auto 73px;
     }
