--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -7,7 +7,7 @@
 }
 
 .places__text:last-of-type {
-    margin: 0;
+    margin-bottom: 0;
 }
 
 @media screen and (max-width: 1150px) {
@@ -26,10 +26,6 @@
 @media screen and (max-width: 352px) {
     .places__text {
         max-width: 288px;
-        margin-left: 16px;
-    }
-
-    .places__text:last-of-type {
         margin-left: 16px;
     }
 }
